--- a/stack.yaml
+++ b/stack.yaml
@@ -15,7 +15,7 @@
 # resolver:
 #  name: custom-snapshot
 #  location: "./custom-snapshot.yaml"
-resolver: nightly-2017-10-08
+resolver: lts-14.3
 
 # User packages to be built.
 # Various formats can be used as shown in the example below.
@@ -41,7 +41,7 @@ packages:
 # Dependency packages to be pulled from upstream that are not in the resolver
 # (e.g., acme-missiles-0.3)
 extra-deps:
-- url: https://github.com/alexkazik/asm/archive/v0.5.0.zip
+- url: https://github.com/alexkazik/asm/archive/v0.6.0.zip
   subdirs:
     - asm-core
     - asm-data
